--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,9 @@
 
 @layer base {
   html {
-    font-family: 'Oswald', 'TT Tunnels Bold', Impact, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
